Prometheus/90-App-Ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: cafeteria-route
spec:
  entryPoints:
    - web
  routes:
  - match: Host(`cafeteria.t.container-training.de`)
    kind: Rule
    services:
    - name: cafeteria-app-service
      port: 80
